Tue Jul  1 20:20:50 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Adding tracking of wait*_pending in TestFramework.

Tue Jul  1 20:04:13 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/MessageTracker.h:

          Added include file.

Tue Jul  1 18:40:48 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/run_test.pl:

          Letting TestFramework add DCPS_debug_level flag.

Tue Jul  1 18:34:14 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Cleaned up preventing adding flags.

        * tests/DCPS/ManyToMany/run_test.pl:

          Changed to use TestFramework.

Tue Jul  1 17:50:00 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Added logic to indicate errors in log files that TestFramework
          should ignore.

        * dds/DCPS/DomainParticipantFactoryImpl.cpp:
        * dds/DCPS/Service_Participant.cpp:

          Added log messages indicating when dtor is called.

        * dds/DCPS/MessageTracker.cpp:

          Added traceability to redmine issue and fixed log statement.

        * dds/DCPS/WriteDataContainer.cpp:

          Fixed log statement.

        * tests/DCPS/Messenger/run_test.pl:
        * tests/DCPS/LargeSample/run_test.pl:

          Added ignoring already identified redmine issue.

Tue Jul  1 17:16:24 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkSet.h:
        * dds/DCPS/transport/framework/DataLinkSet.inl:

          Copy map_ and release lock in send_control prior to calling send_i
          due to deadlock.

        * tests/DCPS/ManualAssertLiveliness/Writer.cpp:

          Identify sending writer in sample.

        * tests/DCPS/ManualAssertLiveliness/subscriber.cpp:

          Keep last 4 messages, due to multiple writers.

Tue Jul  1 15:45:06 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
