@@ -122,7 +122,6 @@ sub report_errors_in_file {
               }
 
               if ($report) {
-                  print STDERR "$file: $line";
                   $error = 1;
               }
           } elsif ($line =~ /wait_(?:messages_)?pending /) {  # REMOVE LATER
@@ -395,7 +394,7 @@ sub finish {
 
   if (defined($wait_to_kill)) {
     $self->stop_processes($wait_to_kill, $first_process_to_stop);
-    if ($self->{report_errors_in_log_file}) {
+    if ($self->{report_errors_in_log_file} && $self->{status} == 0) {
       $self->_info("TestFramework::finish looking for ERRORs in log files."
         . " To prevent this set <TestFramework>->{report_errors_in_log_file}"
         . "=0\n");
